2005-12-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	- fix major memory leak and resultant slowdown on JavaScript iBench from
	my PassRefPtr changes
	
        * kjs/ustring.cpp:
        (KJS::UString::Rep::create): I forgot to change one of the two overloads to create
	with a refcount of 0 instead of 1 (the smart pointer then bumps it. But instead of
	changing it, I changed both to start with a refcounter of 1 and use PassRefPtr::adopt
	to adopt the initial refcount, this may be a hair more efficient.

	- made the assignment operators for smart pointers inline because Shark said so
	
        * kxmlcore/PassRefPtr.h:
        (KXMLCore::::operator=):
        * kxmlcore/RefPtr.h:
        (KXMLCore::::operator=):

2005-12-06  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - fix build when using gcc 4
		
        * kjs/ustring.h:
        Make Rep public.

        * kxmlcore/PassRefPtr.h:
        (KXMLCore::::operator):
        Fix a typo.

2005-12-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	- add PassRefPtr, a smart pointer class that works in conjunction
	with RefPtr but has transfer-of-ownership semantics
	- apply RefPtr and PassRefPtr to UString
	- cleaned up UString a little so that it doesn't need to have so many friend classes

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/identifier.cpp:
        (KJS::Identifier::add):
        * kjs/identifier.h:
        (KJS::Identifier::Identifier):
        (KJS::Identifier::equal):
        * kjs/property_map.cpp:
        (KJS::PropertyMap::get):
        (KJS::PropertyMap::getLocation):
        (KJS::PropertyMap::put):
        (KJS::PropertyMap::remove):
        * kjs/ustring.cpp:
        (KJS::UCharReference::operator=):
        (KJS::UCharReference::ref):
        (KJS::UString::Rep::createCopying):
        (KJS::UString::Rep::create):
        (KJS::UString::usedCapacity):
        (KJS::UString::usedPreCapacity):