@@ -1,3 +1,13 @@
+2005-12-10  Oliver Hunt  <ojh16@student.canterbury.ac.nz>
+
+        Reviewed by Maciej, landed by Darin.
+
+        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=3539
+          Array join and toString methods do not support circular references
+
+        * kjs/array_object.cpp: (ArrayProtoFuncImp::callAsFunction):
+        Added set of visited objects -- don't recurse if item is already in the set.
+
 2005-12-08  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by John.
